# easy-tik-tok

./: .gitignore  README.md  docker-compose.yml  env_template
src/: .dockerignore  Dockerfile  pyproject.toml
src/app/: main.py
src/app/api/: deps.py  routers.py
src/app/api/endpoints/: comment.py  login.py  profile.py  user.py  video.py
src/app/core/: config.py  db.py
src/app/helpers/: cmds.py  media.py
src/app/models/: comment.py  user.py  video.py
src/app/models/migrations/models/: 0_20210519124714_init.sql
src/app/schemas/: __init__.py  token.py
src/app/utils/: paginator.py  video.py
